[package]
name = "nrm"
version = "0.1.3"
authors = ["Pig Fang <g-plane@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
env_logger = "0.8"
futures = "0.3"
log = "0.4"
once_cell = "1.5"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
ssri = "6.0"
structopt = "0.3"
tokio = { version = "1.0", features = ["fs", "macros", "rt-multi-thread", "sync"] }
